# chiaki4deck

./: .gitmodules  CMakeLists.txt  Cmake Build Coomands.txt
android_libs/: .directory  copyfiles.sh  curl-8.8.0-android-21-arm64-v8a.tar.xz  curl-8.8.0-android-21-armeabi-v7a.tar.xz  curl-8.8.0-android-21-x86.tar.xz  curl-8.8.0-android-21-x86_64.tar.xz  json-c-0.17-android-21-arm64-v8a.tar.xz  json-c-0.17-android-21-armeabi-v7a.tar.xz  json-c-0.17-android-21-x86.tar.xz  json-c-0.17-android-21-x86_64.tar.xz  libcares-1.30.0-android-21-arm64-v8a.tar.xz  libcares-1.30.0-android-21-armeabi-v7a.tar.xz  libcares-1.30.0-android-21-x86.tar.xz  libcares-1.30.0-android-21-x86_64.tar.xz  libcurl-8.8.0-android-21-arm64-v8a.tar.xz  libcurl-8.8.0-android-21-armeabi-v7a.tar.xz  libcurl-8.8.0-android-21-x86.tar.xz  libcurl-8.8.0-android-21-x86_64.tar.xz  libminiupnpc-2.2.7-android-21-arm64-v8a.tar.xz  libminiupnpc-2.2.7-android-21-armeabi-v7a.tar.xz  libminiupnpc-2.2.7-android-21-x86.tar.xz  libminiupnpc-2.2.7-android-21-x86_64.tar.xz  libnghttp2-1.61.0-android-21-arm64-v8a.tar.xz  libnghttp2-1.61.0-android-21-armeabi-v7a.tar.xz  libnghttp2-1.61.0-android-21-x86.tar.xz  libnghttp2-1.61.0-android-21-x86_64.tar.xz  libopus-1.5.2-android-21-arm64-v8a.tar.xz  libopus-1.5.2-android-21-armeabi-v7a.tar.xz  libopus-1.5.2-android-21-x86.tar.xz  libopus-1.5.2-android-21-x86_64.tar.xz  libplacebo-2024.06.27-android-21-arm64-v8a.tar.xz  libplacebo-2024.06.27-android-21-armeabi-v7a.tar.xz  libplacebo-2024.06.27-android-21-x86.tar.xz  libplacebo-2024.06.27-android-21-x86_64.tar.xz  libspeexdsp-1.2.1-android-21-arm64-v8a.tar.xz  libspeexdsp-1.2.1-android-21-armeabi-v7a.tar.xz  libspeexdsp-1.2.1-android-21-x86.tar.xz  libspeexdsp-1.2.1-android-21-x86_64.tar.xz  libvpx-1.13.1-android-21-arm64-v8a.tar.xz  libvpx-1.13.1-android-21-armeabi-v7a.tar.xz  (+19 more)
android_libs/arm64-v8a/lib/: libssl.so.1.1
android_libs/armeabi-v7a/lib/: libcrypto.so.1.1  libssl.so.1.1
android_libs/curl-8.8.0-android-21-arm64-v8a/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml  dependencies.d2
android_libs/curl-8.8.0-android-21-armeabi-v7a/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml
android_libs/curl-8.8.0-android-21-x86/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml  dependencies.box  dependencies.dot
android_libs/curl-8.8.0-android-21-x86_64/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml
android_libs/ffmpeg-7.0-android-21-arm64-v8a/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml  dependencies.d2
android_libs/ffmpeg-7.0-android-21-armeabi-v7a/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml  dependencies.box
android_libs/ffmpeg-7.0-android-21-x86/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml
android_libs/ffmpeg-7.0-android-21-x86_64/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml  dependencies.dot
android_libs/json-c-0.17-android-21-arm64-v8a/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml
android_libs/json-c-0.17-android-21-armeabi-v7a/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml
android_libs/json-c-0.17-android-21-x86/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml
android_libs/json-c-0.17-android-21-x86_64/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml
android_libs/libcares-1.30.0-android-21-arm64-v8a/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml
android_libs/libcares-1.30.0-android-21-armeabi-v7a/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml
android_libs/libcares-1.30.0-android-21-x86/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml
android_libs/libcares-1.30.0-android-21-x86_64/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml
android_libs/libcurl-8.8.0-android-21-arm64-v8a/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml
android_libs/libcurl-8.8.0-android-21-armeabi-v7a/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml
android_libs/libcurl-8.8.0-android-21-x86/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml  dependencies.box  dependencies.d2
android_libs/libcurl-8.8.0-android-21-x86_64/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml  dependencies.dot
android_libs/libminiupnpc-2.2.7-android-21-arm64-v8a/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml
android_libs/libminiupnpc-2.2.7-android-21-armeabi-v7a/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml
android_libs/libminiupnpc-2.2.7-android-21-x86/.ndk-pkg/: Changelog.txt  MANIFEST.txt  RECEIPT.yml
android_libs/libminiupnpc-2.2.7-android-21-x86_64/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml
android_libs/libnghttp2-1.61.0-android-21-arm64-v8a/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml
android_libs/libnghttp2-1.61.0-android-21-armeabi-v7a/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml
android_libs/libnghttp2-1.61.0-android-21-x86/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml
android_libs/libnghttp2-1.61.0-android-21-x86_64/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml
android_libs/libopus-1.5.2-android-21-arm64-v8a/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml
android_libs/libopus-1.5.2-android-21-armeabi-v7a/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml
android_libs/libopus-1.5.2-android-21-x86/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml
android_libs/libopus-1.5.2-android-21-x86_64/.ndk-pkg/: MANIFEST.txt  RECEIPT.yml
cmake/: FindCURL.cmake  FindOpus.cmake  FindSDL2.cmake  OpenSSLExternalProject.cmake
gui/: CMakeLists.txt
gui/android/: AndroidManifest.xml  build.gradle
gui/android/java/org/chiaki4deck/chiaki4deck/: ChiakiActivity.java
gui/android/java/org/libsdl/app/: SDLActivity.java
gui/android/java/src/org/chiaki4deck/chiaki4deck/: ChiakiActivity.java  ChiakiApplication.java
gui/android/libs/x86/: libcrypto.so.1.1  libssl.so.1.1
gui/android/libs/x86_64/: .directory
gui/android/res/values/: libs.xml
gui/include/: controllermanager.h  qmlbackend.h  qmlmainwindow.h  qmlopenglmainwindow.h  qmlvulkanmainwindow.h
gui/src/: controllermanager.cpp  main.cpp  qmlbackend.cpp  qmlmainwindow.cpp  qmlopenglmainwindow.cpp  qmlsettings.cpp  qmlvulkanmainwindow.cpp
gui/src/qml/: SettingsDialog.qml
lib/: CMakeLists.txt
lib/include/chiaki/: ffmpegdecoder.h
lib/protobuf/: CMakeLists.txt
lib/src/: thread.c
(+765 files in other folders)
